# json-parser

./: .gitattributes  .gitignore  .mcp.json.example  CLAUDE.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
